--- a/index.html
+++ b/index.html
@@ -7,9 +7,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
     <title>html-css-zoom</title>
 </head>
+
 <body>
-    
+    <!-- barra superiore -->
+    <header>
+
+        <div class="container">
+            <!-- speaker view -->
+            <div class="label">
+                <a href="#">
+                    <i class="fa-solid fa-table-cells"></i>
+                    <span>Speaker View</span>
+                </a>
+            </div>
+            <!-- full screen -->
+            <div class="label">
+                <a href="#">
+                    <i class="fa-solid fa-maximize"></i>
+                </a>
+            </div>
+        
+        </div>
+
+    </header>
+
+    <!-- parte centrale -->
+    <main>
+
+    </main>
+
+    <!-- barra inferiore -->
+    <footer>
+
+    </footer>
+
+
+
 </body>
 </html>
