fix menu bottom part

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <footer>
 
         <div class="container-bottom">
+
             <!-- pulsanti audio-video -->
             <div class="click">
 
@@ -69,8 +70,53 @@
             
             <!-- pulsanti menu centrale -->
             <div class="menu">
+
+                <a href="#">
+                    <i class="fa-solid fa-user-plus icons"></i>
+                    <div class="text">Invite</div>
+                </a>
+
+                <a href="#">
+                    <i class="fa-solid fa-user-group icons"></i>
+                    <div class="text">Manage Participants</div>
+                </a>
+
+                <a href="#">
+                    <i class="fa-solid fa-chart-column icons"></i>
+                    <div class="text">Polling</div>
+                </a>
+
+                <a href="#">
+                    <i class="fa-solid fa-share-from-square icons" id="green"></i>
+                    <div class="text">Share Screen</div>
+                </a>
+
+                <a href="#">
+                    <i class="fa-solid fa-angle-up"></i>
+                </a>
+
+                <a href="#">
+                    <i class="fa-solid fa-comment icons"></i>
+                    <div class="text">Chat</div>
+                </a>
+
+                <a href="#">
+                    <i class="fa-solid fa-record-vinyl icons"></i>
+                    <div class="text">Record</div>
+                </a>
+
+                <a href="#">
+                    <i class="fa-brands fa-microsoft icons"></i>
+                    <div class="text">Breakout Rooms</div>
+                </a>
+
+                <a href="#">
+                    <i class="fa-solid fa-ellipsis icons"></i>
+                    <div class="text">More</div>
+                </a>
                 
             </div>
+
             <!-- pulsante fine chiamata -->
             <div class="end-call">
 
