add images + fix main + fixed bottom part

--- a/index.html
+++ b/index.html
@@ -40,6 +40,376 @@
         <div class="container-main">
 
             <div class="people-space">
+                <!-- icone persone connesse -->
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+                
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="user">
+                    <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
+                    <div class="name">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
 
                 <div class="user">
                     <img src="https://img.freepik.com/premium-photo/free-photo-beautiful-snow-covered-mountains-landscape-kashmir-state-india_954226-7858.jpg" alt="random">
